fixed layout issues and ui improvments

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,7 @@
   margin: 0 auto;
 }
 
-.noteslist_container{
-  display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
-  
-  gap: 0.5rem;
-  margin: 1rem;
+
+.noteblock{
+  display: none;
 }
