--- a/src/components/Note/note.css
+++ b/src/components/Note/note.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-wrap: break-word;
 
 }
 .note_footer{
