--- a/src/components/NoteList/notelist.css
+++ b/src/components/NoteList/notelist.css
@@ -4,3 +4,7 @@
     gap: 0.5rem;
     margin: 1rem;
 }
+
+.noteblock{
+    display: none;
+}
